--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "nextjs-ts-tailwind-starter",
+  "name": "nextjs-app-starter",
+  "description": "NextJS starter template for real-world app development",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +10,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.5",
+    "@tanstack/react-query": "^4.2.1",
+    "next": "^12.2.5",
+    "next-better-api": "^0.1.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "superjson": "^1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.2.1",
     "@types/node": "18.7.4",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
+    "eslint": "^8.22.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.4.1",
+    "eslint-import-resolver-typescript": "^3.5.0",
     "eslint-plugin-import": "^2.26.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
