--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@components/*": [
-        "./components/*"
-      ],
-      "@lib/*": [
-        "./lib/*"
-      ],
+      "@components/*": ["./components/*"],
+      "@lib/*": ["./lib/*"],
+      "@api/*": ["./pages/api/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
